# ros2-car-models

./: .bash_history  .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
cmd/: CMakeLists.txt  package.xml
cmd/src/: joint_trajectory_gazebo_control.cpp
cmd_pubsub/: package.xml  setup.cfg  setup.py
cmd_pubsub/cmd_pubsub/: 4ws_joint_gazebo_control_cmd.py  4ws_joint_ros2_control_cmd.py  fws_joint_gazebo_control_cmd.py  fws_joint_ros2_control_cmd.py  joint_gazebo_control_cmd.py  joint_ros2_control_cmd.py
control/: CMakeLists.txt  package.xml
control/config/: 4ws_joint_control.yaml  ackermann_control.yaml  control.yaml  fws_joint_control.yaml  joint_control.yaml
control/launch/: control.launch.py
description/: CMakeLists.txt  package.xml
description/launch/: description.launch.py  display_rviz.launch.py  publish_robot_state.launch.py
description/rviz/: autocar.rviz  catvehicle.rviz  em_3905.rviz  humancar.rviz  prius.rviz  rbcar.rviz  rbcar_roborder.rviz  rc_truck.rviz  virtual_robot.rviz  yahboomcar_R2.rviz
description/urdf/: autocar.urdf.xacro  autocar_ackermann_gazebo_control.xacro  autocar_core.xacro  autocar_gazebo_control.xacro  autocar_joint_gazebo_control.xacro  catvehicle.urdf  (+16 more)
gazebo/: CMakeLists.txt  package.xml
gazebo/launch/: autocar_4ws_ackermann_gazebo_control_simpleL.launch.py  autocar_4ws_ackermann_ros2_control_simpleL.launch.py  autocar_4ws_joint_gazebo_control_simpleL.launch.py  autocar_4ws_joint_ros2_control_simpleL.launch.py  autocar_ackermann_gazebo_control_simpleL.launch.py  autocar_ackermann_ros2_control_simpleL.launch.py  autocar_fws_ackermann_gazebo_control_simpleL.launch.py  autocar_fws_ackermann_ros2_control_simpleL.launch.py  autocar_fws_joint_gazebo_control_simpleL.launch.py  autocar_fws_joint_ros2_control_simpleL.launch.py  autocar_gazebo_control_simpleL.launch.py  autocar_joint_gazebo_control_simpleL.launch.py  autocar_joint_ros2_control_simpleL.launch.py  autocar_ros2_control_simpleL.launch.py  autocar_simpleL.launch.py  gazebo.launch.py  odom2tf_launch.py  prius_ackermann_gazebo_control_simpleL.launch.py  virtual_robot_ackermann_gazebo_control_simpleL.launch.py  virtual_robot_ackermann_ros2_control_simpleL.launch.py
gazebo/src/: odom2tf.cpp
gazebo/worlds/: simpleL.world
viz/: CMakeLists.txt  package.xml
(+71 files in other folders)
