<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="alvin.chuang@liteon.com">alvin</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_manager</depend>
  <depend>ackermann_steering_controller </depend>
  <depend>description</depend>
  <!-- <depend>imu_filter_madgwick</depend> -->
  <!-- <depend>interactive_marker_twist_server</depend> -->
  <depend>joint_state_broadcaster</depend>
  <!-- <depend>joint_trajectory_controller</depend> -->
  <!-- <depend>joy</depend> -->
  <!-- <depend>robot_localization</depend> -->
  <depend>robot_state_publisher</depend>
  <!-- <depend>teleop_twist_joy</depend> -->
  <!-- <depend>twist_mux</depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
